# sin-trade-fs

./: .gitignore  CITATIONS.md  CLAUDE.md  README.md  check_columns.py  cleanup.sh  docker-compose.yml  final_analysis.py  inspect_schema.py  todo.md
sin-trade-be/: .coverage  .coverage.Adrians-Personal-Laptop_local.pid56536.XitAd4Qx.HNQIp837rWOh  .env  .envrc  .gitignore  Dockerfile  Pipfile  Procfile  README.md  pyproject.toml  requirements.txt  setup.py
sin-trade-be/src/: app.py  beapp.py  config.py  conftest.py  test_app.py  test_app_be.py  test_beapp.py
sin-trade-be/src/controllers/: asset_controller.py  auth_controller.py
sin-trade-be/src/middleware/: auth_middleware.py
sin-trade-be/src/models/: active_assets_model.py  auth_model.py  user_model.py
sin-trade-be/src/routes/: asset_routes.py  auth_routes.py  test_routes.py
sin-trade-be/src/services/: amqp_be_publisher.py  amqp_be_subscriber.py  asset_services.py  auth_services.py  be_job_scheduler.py  email_service.py  ping_services.py
sin-trade-be/src/tests/: test_app.py  test_asset_services.py  test_auth.py  test_auth_services.py  test_config.py  test_models.py  test_ping_services.py  test_routes.py  test_utils.py
sin-trade-be/src/utils/: date_utils.py  number_utils.py  string_utils.py
sin-trade-ds/: .coverage  .env  .gitignore  Dockerfile  Pipfile  Procfile  analyze_supabase_data.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
sin-trade-ds/src/: app.py  app_ds.py  config.py  conftest.py  dsapp.py  test_app.py  test_app_ds.py  test_dsapp.py
sin-trade-ds/src/models/: auth_model.py  (+2 more)
(+117 files in other folders)
