[tool.poetry]
name = "sin-trade-ds"
version = "0.1.0"
description = "data service for sin-trade'"
authors = ["Adrian Apodaca"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
blinker = "1.8.2"
click = "8.1.7"
flask = "3.0.3"
flask-cors = "5.0.0"
gunicorn = "23.0.0"
iniconfig = "2.0.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "2.1.5"
packaging = "24.1"
pluggy = "1.5.0"
pytest = "8.3.3"
python-dotenv = "1.0.1"
werkzeug = "3.0.3"
supabase = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
